hedtools/tests/data/invalid_wiki_schemas/HED_header_bad_library.mediawiki
HED library:invalidlib1293

